# Anni2

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
AnniBase/: CMakeLists.txt
AnniBase/include/Buffer/: Buffer.h  BufferCreateInfo.h  BufferFactory.h
AnniBase/include/GfxAPI/vulkan/: AnniVulkan.h  ExtensionUtility.h  ValidationUtility.h
AnniBase/include/GfxComponents/: DeviceManager.h  GraphicsComponent.h  InstanceWrapper.h  QueueManager.h  SwapchainManager.h
AnniBase/include/Image/: GeneralPurposeImage.h  IImageBase.h  ImageCI.h  ImageFactory.h  SwapchainImage.h
AnniBase/include/Math/: AnniMath.h
AnniBase/include/Memory/: VmaAllocator.h
AnniBase/include/RenderGraph/: IVirtualResource.h  VirtualBuffer.h
AnniBase/include/Resource/: Resource.h
AnniBase/include/Synchronization/: SyncInfo.h  TimelineSemPoolUnsafe.h  TimelineSemWrapper.h
AnniBase/include/WindowsSubSystem/: WindowsSys.h
AnniBase/include/WindowsSubSystem/glfw/: WindowsSubsystem.h
AnniBase/src/Buffer/: Buffer.cpp  BufferCreateInfo.cpp  BufferFactory.cpp
AnniBase/src/GfxAPI/vulkan/: ExtensionUtility.cpp  ValidationUtility.cpp
AnniBase/src/GfxComponents/: DeviceManager.cpp  InstanceWrapper.cpp  QueueManager.cpp  SwapchainManager.cpp
AnniBase/src/Image/: GeneralPurposeImage.cpp  IImageBase.cpp  ImageCI.cpp  ImageFactory.cpp  SwapchainImage.cpp
AnniBase/src/Memory/: VmaAllocator.cpp
AnniBase/src/RenderGraph/: IVirtualResource.cpp
AnniBase/src/Synchronization/: TimelineSemPoolUnsafe.cpp  TimelineSemWrapper.cpp
AnniBase/src/WindowsSubSystem/: WindowsSys.cpp
AnniRenderer/: CMakeLists.txt
AnniRenderer/include/: EngineConfig.h
AnniRenderer/src/: main.cpp
third_part/: CMakeLists.txt
